# Terra-Prima

./: .gitignore  .gitmodules  CMakeLists.txt  GENESIS_ENGINE_CODEX_PROMPT.md  README.md  icon.svg.import  project.godot  Идеи  Идея 2  План ИИ.md  План.md
.claude/: settings.local.json
addons/awesome-godot-master/: .pre-commit-config.yaml  godot-logo.svg.import
addons/nobodywho/: icon.svg.import
addons/playercharacter3d_template/: godot_icon.png.import  playercharacter3d_image.png.import  playercharacter3d_image2.png.import
addons/uiJuicer/: BounceButton.svg.import  Bouncer.svg.import  FadeButton.svg.import  FadeLabel.svg.import  Fader.svg.import  TimedLabel.svg.import
assets/: 8bitOperatorPlus-Bold.ttf.import  8bitOperatorPlus-Regular.ttf.import  8bitOperatorPlus8-Bold.ttf.import  8bitOperatorPlus8-Regular.ttf.import  8bitOperatorPlusSC-Bold.ttf.import  8bitOperatorPlusSC-Regular.ttf.import  UI_player(Chat) _0001.png.import  UI_player(ChatBubble) _0001.png.import  UI_player(ChatBubble_PlayerColor_ЛевыйНиз_Угол) _0001.png.import  UI_player(ChatBubble_PlayerColor_НизСередина) _0001.png.import  UI_player(ChatBubble_PlayerColor_ПравыйВерх_Угол) _0001.png.import  UI_player(ChatBubble_PlayerColor_ПравыйНиз_Угол) _0001.png.import  UI_player(ChatBubble_PlayerColor_СбокуСправаСередина) _0001.png.import  UI_player(ChatBubble_ЛевыйВерх_Угол) _0001.png.import  UI_player(ChatBubble_ЛевыйНиз_Угол) _0001.png.import  UI_player(ChatBubble_ПравыйВерх_Угол) _0001.png.import  UI_player(ChatBubble_ПравыйНиз_Угол) _0001.png.import  UI_player(ChatBubble_СбокуСлеваСередина) _0001.png.import  UI_player(ChatBubble_СбокуСправаСередина) _0001.png.import  UI_player(ChatBubble_Середина) _0001.png.import  UI_player(Chat_Bar_Background) _0001.png.import  UI_player(Chat_EnterText) _0001.png.import  UI_player(Chat_Send_Btn) _0001.png.import  UI_player(Crosshair_Dot) _0001.png.import  UI_player(MicrophoneUI) _0001.png.import  UI_player(MicrophoneUI_Microphone_isActive_Btn) _0001.png.import  UI_player(MicrophoneUI_Microphone_isDisabled_Btn) _0001.png.import  UI_player(MicrophoneUI_Очертания_СнизуСередина) _0001.png.import  UI_player(MicrophoneUI_УровеньГолоса_ПраваяСторона_НужноКлонироватьУровеньВправоТоже) _0001.png.import  UI_player(Settings) _0001.png.import  UI_player(Settings_Background_Btn) _0001.png.import  UI_player(Settings_ChatSettings) _0001.png.import  UI_player(Settings_Friends) _0001.png.import  UI_player(Settings_GameSettings) _0001.png.import  UI_player(Settings_KIM) _0001.png.import  UI_player(Settings_Questions) _0001.png.import  UI_player(Settings_Redactor) _0001.png.import  UI_player(Tool_Bar) _0001.png.import  UI_player(Tool_Bar_Background) _0001.png.import  UI_player(Tool_Bar_ПодвижнаяТень) _0001.png.import  (+8 more)
assets/ui_alias/: chat_bar_bg.png.import  chat_input_bg.png.import  chat_send_btn.png.import  crosshair_dot.png.import  mic_bg.png.import  mic_button_active.png.import  mic_button_disabled.png.import  mic_level_bar.png.import  settings_chat.png.import  settings_editor.png.import  settings_friends.png.import  settings_game.png.import  settings_help.png.import  settings_kim.png.import  settings_toggle.png.import  toolbar_bg.png.import  toolbar_shadow.png.import  ui_hp_bar.png.import  ui_top_right_bg.png.import
data/elements/: All Elements Dataset HOg Periodic Table.xlsx  shannon_radii.csv
example/: example.gd  example.tscn
genesis_engine/: CMakeLists.txt  README.md  build_all.ps1
genesis_engine/clas_module/: API_CONTRACT.md  MODULES.md  README.md  SLEEP_POLICY.md  SYSTEM_PROMPT.md  modules_registry.json
genesis_engine/clas_module/data/: README.md
genesis_engine/renderer/: GodotWakatime.png.import  icon.png.import  project.godot  wakatime_logo.jpg.import
genesis_engine/renderer/addons/genesis_bridge/: SConstruct  genesis_bridge.gdextension  genesis_bridge.gdextension.uid
genesis_engine/renderer/addons/genesis_bridge/src/: .gdignore  BridgeShm.cpp  BridgeShm.h  GenesisBridge.cpp  GenesisBridge.h  genesis_bridge.cpp  register_types.cpp  register_types.h
genesis_engine/renderer/addons/godot-wakatime/: godot-wakatime.gd  godot-wakatime.gd.uid  plugin.cfg
genesis_engine/renderer/addons/godotwind_ui_animator/: godotwind.gd  godotwind.gd.uid  godotwind_icon.png.import  plugin.cfg  plugin_init.gd  plugin_init.gd.uid
genesis_engine/renderer/scenes/: main.tscn  ui.tscn
genesis_engine/renderer/scripts/: main.gd  main.gd.uid  mock_bridge.gd  mock_bridge.gd.uid  ui.gd  ui.gd.uid
genesis_engine/renderer/shaders/: chunk.gdshader
genesis_engine/shared/: ai_protocol.h  sim_state.h
genesis_engine/sim_core/include/ipc/: SharedMemoryBridge.h
genesis_engine/sim_core/include/persistence/: Snapshot.h
genesis_engine/sim_core/include/sim/: ParticleSystem.h  SimScheduler.h  WorldSim.h
genesis_engine/sim_core/include/world/: ChunkStore.h  ChunkTypes.h
genesis_engine/sim_core/src/: main.cpp
genesis_engine/sim_core/src/ipc/: SharedMemoryBridge.cpp
genesis_engine/sim_core/src/persistence/: Snapshot.cpp
genesis_engine/sim_core/src/sim/: ParticleSystem.cpp  SimScheduler.cpp  WorldSim.cpp
genesis_engine/sim_core/src/tools/: shm_reader.cpp
genesis_engine/sim_core/src/world/: ChunkStore.cpp
images/: UiJuicer.png.import  UiJuicer.svg.import
scenes/kim/: kim_avatar.gd  kim_avatar.tscn
scenes/player/: player.tscn
scenes/ui/: chat_bar.tscn  chat_message.tscn  microphone_ui.tscn  player_hud.tscn  rating_popup.tscn  settings_panel.tscn  toolbar.tscn  vote_popup.tscn
scenes/world/: world_scene.tscn
src/: ChunkStore.cpp  Clock.cpp  EntityLOD.cpp  JobSystem.cpp  Renderer.cpp  SimScheduler.cpp  SnapshotStore.cpp  World.cpp  main.cpp
tests/: ChunkStoreTests.cpp  SimSchedulerTests.cpp  SnapshotTests.cpp  TestMain.cpp
tools/: validate_ui_encoding.py
(+100 files in other folders)
